# suggest

./: .cache  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  data_visualizations.py  flake.nix  notes.txt  pyproject.toml  spotify_data_isrc.json  testresults.txt
alembic/: env.py
alembic/versions/: 001_add_vector_extension.py  3c1469b5aa23_returned_user_trajectories_link.py  5fc3ac1442cb_reconceptualized_models_and_trajectories.py  6b3d6d4a1e98_model_str_as_pk.py  7bcadc170690_fix_data_types.py  d1e04d45b558_small_fix.py  debaaf8e5af6_removed_model_trajectories_link_and_.py  ecbaf5dd470e_removed_user_trajectories_link_figure_.py  f911524e5267_clean_initial_schema.py
data/: musicbrainz.py  sample.csv  spotify.py  spotify_new.json
docker/: docker-compose.yml
docker/collecter/: Dockerfile
docker/collection/: Dockerfile
docker/db/: Dockerfile
docker/db/init/: setup.sql
docker/embed/: Dockerfile
docs/: todo.txt
src/: db.py  logger.py  models.py  objects.py  plots.py  quickstart.py  reduce.py  sp_tokens.py  spotdl_patch.py  spotdl_test.py  test_mb.py
src/ai/: linear.py
src/ai_models/: linear.py
src/collecter/: downloader.py  embedders.py  main.py  metadata.py  mocks.py  sp_tokens.py  test.py  test_fakes.py
src/collection/: downloader.py  main.py  metadata.py
src/embedders/: auditus.py  jukemir.py  main.py
src/metrics/: general.py  linear.py  reduce.py
src/models/: linear.py
src/music_embed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/old/: objects.py  plots.py  quickstart.py  reduce.py
src/suggester/: objects.py
src/suggester/ai_models/: linear.py
src/suggester/metrics/: general.py  linear.py  reduce.py
tests/: conftest.py
tests/mocks/: apis.py  db.py  db_session.py  embedders.py
tests/property/: test_api.py  test_database_interactions.py  test_pipeline.py
tests/strategies/: apis.py  queue.py
