[project]
name = "music-embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auditus>=0.0.6",
    "ipympl>=0.9.7",
    "jukemirlib",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "spotdl>=4.2.11",
    "spotipy>=2.25.1",
    # "tensorflow-rocm",
    "torch>=2.6.0",
    "umap-learn>=0.5.7",
    "xmltodict>=0.14.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
jukemirlib = { git = "https://github.com/rodrigo-castellon/jukemirlib.git" }
# tensorflow-rocm = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3.3/tensorflow_rocm-2.16.2-cp312-cp312-manylinux_2_28_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

